--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge week 5</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="main.js" defer></script>
+    <title>Comment Box</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./logo.png">
+    <script src="./main.js" defer></script>
   </head>
   <body>
-    <h2>Comment Box</h2>
-    <h3>Challenge week 5</h3>
-    <div class="input-user">
+    <header>
+      <div id="icon">
+      <h2>Social</h2>
+    </header>
+    <main class="input-user">
       <input
         type="text"
         id="comment-from-user"
         placeholder="write your comment"
       />
       <button id="btn-add">Add comment</button>
-    </div>
-    <div class="display-comments" id="show-comments"></div>
+    </main>
+    <section class="display-comments" id="show-comments"></section>
   </body>
 </html>
